--- a/default.hbs
+++ b/default.hbs
@@ -13,6 +13,10 @@
     this will take care of caching and cache-busting automatically --}}
     <link rel="stylesheet" type="text/css" href="{{asset "built/screen.css"}}" />
 
+    {{!-- stylesheet for megamenu --}}
+    <link rel="stylesheet" type="text/css" href="{{asset "built/megamenu.css"}}" />
+
+
     {{!-- This tag outputs all your advanced SEO meta, structured data, and other important settings,
     it should always be the last tag before the closing head tag --}}
     {{ghost_head}}
