--- a/assets/css/megamenu.css
+++ b/assets/css/megamenu.css
@@ -13,8 +13,8 @@
     /* font-size: 16px; */
     border: none;
     outline: none;
-    color: white;
-    padding: 14px 16px;
+    color: black;
+    /* padding: 14px 16px; */
     background-color: inherit;
     font: inherit; /* Important for vertical align on mobile phones */
     margin: 0; /* Important for vertical align on mobile phones */
@@ -22,17 +22,17 @@
   
   /* Add a red background color to navbar links on hover */
   .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
+    background-color: #2c7e95;
   }
   
   /* Dropdown content (hidden by default) */
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: var(--ghost-accent-color);
     width: 100%;
     left: 0;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    /* box-shadow: 0px 8px 16px 0px var(--ghost-accent-color); */
     z-index: 1;
   }
   
@@ -40,7 +40,7 @@
   .dropdown-content .header {
     background: red;
     padding: 16px;
-    color: white;
+    color: black;
   }
   
   /* Show the dropdown menu on hover */
@@ -53,7 +53,7 @@
     float: left;
     width: 33.33%;
     padding: 10px;
-    background-color: #ccc;
+    background-color: var(--ghost-accent-color);
     height: 250px;
   }
   
@@ -69,7 +69,7 @@
   
   /* Add a background color on hover */
   .column a:hover {
-    background-color: #ddd;
+    background-color: var(--ghost-accent-color);
   }
   
   /* Clear floats after the columns */
