--- a/default.hbs
+++ b/default.hbs
@@ -39,7 +39,7 @@
                 <button class="gh-burger"></button>
             </div>
 
-            <nav class="gh-head-menu">
+            <nav class="gh-head-menu nav">
                 {{navigation}}
             </nav>
 
