--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -477,11 +477,11 @@ production stylesheet in assets/built/screen.css
     height: 24px;
 } */
 
-@media (min-width: 992px) {
+/* @media (min-width: 992px) {
     body:not(.is-dropdown-loaded) .gh-head-menu .nav > li {
         opacity: 0;
     }
-}
+} */
 
 
 /* Dropdown
