bootstrap megamenu not working

--- a/partials/nav-megamenu/about.hbs
+++ b/partials/nav-megamenu/about.hbs
@@ -1,7 +1,7 @@
 <div class="dropdown">
     <a class="dropbtn" href="about">About
     </a>
-    <div class="dropdown-content">
+    <div class="dropdown-content container">
         <div class="row">
             <div class="col-sm-4">
                 <h5 class="dropdown-header">Section 1</h5>
