meagmenu collapse in hamburger stacking incorrect

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -309,9 +309,9 @@ production stylesheet in assets/built/screen.css
     display: none;
 }
 
-.is-head-left-logo.home-template .gh-head:not(.is-header-hidden) .gh-head-menu {
+/* .is-head-left-logo.home-template .gh-head:not(.is-header-hidden) .gh-head-menu {
     margin-left: -40px;
-}
+} */
 
 @media (min-width: 992px) {
     .is-head-left-logo .gh-head-menu {
