--- a/assets/css/megamenu.css
+++ b/assets/css/megamenu.css
@@ -1,80 +1,9 @@
-/* modified from https://www.w3schools.com/howto/howto_css_mega_menu.asp */
+/* make nav-link width=100% when in hamburger menu */
 
-/* Navbar tab with megamenu  */
 
-  /* The dropdown container */
-  .dropdown {
-    /* float: left; */
-    overflow: hidden;
+
+@media (max-width: 767px) {
+  .gh-head-menu .nav-item{
+    width: 100%
   }
-  
-  /* Dropdown button */
-  .dropdown .dropbtn {
-    /* font-size: 16px; */
-    border: none;
-    outline: none;
-    color: black;
-    /* padding: 14px 16px; */
-    background-color: inherit;
-    font: inherit; /* Important for vertical align on mobile phones */
-    margin: 0; /* Important for vertical align on mobile phones */
-  }
-  
-  /* Add a red background color to navbar links on hover */
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: #2c7e95;
-  }
-  
-  /* Dropdown content (hidden by default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: var(--ghost-accent-color);
-    width: 100%;
-    left: 0;
-    /* box-shadow: 0px 8px 16px 0px var(--ghost-accent-color); */
-    z-index: 1;
-  }
-  
-  /* Mega Menu header, if needed */
-  .dropdown-content .header {
-    background: red;
-    padding: 16px;
-    color: black;
-  }
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
-  /* Create three equal columns that floats next to each other */
-  .column {
-    float: left;
-    width: 33.33%;
-    padding: 10px;
-    background-color: var(--ghost-accent-color);
-    height: 250px;
-  }
-  
-  /* Style links inside the columns */
-  .column a {
-    float: none;
-    color: black;
-    padding: 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  /* Add a background color on hover */
-  /* .column a:hover {
-    background-color: var(--ghost-accent-color);
-  } */
-  
-  /* Clear floats after the columns */
-  /* .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  } */
+}
