--- a/partials/nav-megamenu/policy.hbs
+++ b/partials/nav-megamenu/policy.hbs
@@ -1,31 +1,140 @@
-<div class="dropdown">
-    <a class="dropbtn" href="policy">Policy
+<li class="nav-item dropdown position-static">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Policy
     </a>
-    <div class="dropdown-content">
-				<div class="row">
-				<div class="column">
-					<h5 class="dropdown-header">Section 1</h5>
-					<p class="dropdown-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in volutpat felis. Suspendisse eget enim ut odio molestie suscipit. Nulla facilisi. Sed bibendum, velit vitae bibendum consequat, massa elit aliquam elit, vel dapibus arcu neque eu nulla. Aenean a nulla magna. </p>
-					<img class="dropdown-img" src="https://via.placeholder.com/300x200" alt="Image">
-				</div>
-				<div class="column">
-					<h5 class="dropdown-header">Section 2</h5>
-					<ul class="list-unstyled">
-					<li><a href="#" class="dropdown-item">Link 1</a></li>
-					<li><a href="#" class="dropdown-item">Link 2</a></li>
-					<li><a href="#" class="dropdown-item">Link 3</a></li>
-					<li><a href="#" class="dropdown-item">Link 4</a></li>
-					</ul>
-				</div>
-				<div class="column">
-					<h5 class="dropdown-header">Section 3</h5>
-					<ul class="list-unstyled">
-					<li><a href="#" class="dropdown-item">Link 5</a></li>
-					<li><a href="#" class="dropdown-item">Link 6</a></li>
-					<li><a href="#" class="dropdown-item">Link 7</a></li>
-					<li><a href="#" class="dropdown-item">Link 8</a></li>
-					</ul>
-				</div>
-				</div>
+    <!-- Dropdown menu -->
+    <div class="dropdown-menu w-100 mt-0" aria-labelledby="navbarDropdown" style="border-top-left-radius: 0px; border-top-right-radius: 0px; position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(111px, 52.5px, 0px);" data-popper-placement="bottom-start" data-mdb-popper="null">
+    <div class="container">
+        <div class="row my-4">
+        <div class="col-md-6 col-xl-3 mb-3 mb-xl-0">
+            <div class="pt-2">
+            <p class="text-uppercase font-weight-bold">
+                Explicabo voluptas
+            </p>
+            <div class="bg-image hover-overlay shadow-1-strong rounded ripple mb-4" data-mdb-ripple-color="light">
+                <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/113.webp" class="img-fluid">
+                <a href="#!">
+                <div class="mask" style="
+                                background-color: rgba(
+                                    251,
+                                    251,
+                                    251,
+                                    0.15
+                                );
+                                "></div>
+                </a>
+            </div>
+            <div class="d-flex justify-content-between">
+                <a href="" class="text-info"><i class="fas fa-plane pe-1"></i>Travels</a>
+                <p><u>15.07.2020</u></p>
+            </div>
+            <a href="" class="text-dark">
+                <h5>This is title of the news</h5>
+                <p>
+                Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Odit, iste aliquid.
+                Sed id nihil magni, sint vero
+                provident esse numquam perferendis
+                ducimus dicta adipisci iusto nam
+                temporibus modi animi laboriosam?
+                </p>
+            </a>
+            </div>
+        </div>
+        <div class="col-md-6 col-xl-3 mb-3 mb-xl-0">
+            <div class="pt-2">
+            <p class="text-uppercase font-weight-bold">
+                Explicabo voluptas
+            </p>
+            <a href="" class="text-dark">
+                <div class="row mb-4 border-bottom pb-2">
+                <div class="col-3">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="img-fluid shadow-1-strong rounded" alt="Hollywood Sign on The Hill">
+                </div>
+                <div class="col-9">
+                    <p class="mb-2">
+                    <strong>Lorem ipsum dolor sit
+                        amet</strong>
+                    </p>
+                    <p><u>15.07.2020</u></p>
+                </div>
+                </div>
+            </a>
+            <a href="" class="text-dark">
+                <div class="row mb-4 border-bottom pb-2">
+                <div class="col-3">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="img-fluid shadow-1-strong rounded" alt="Palm Springs Road">
+                </div>
+                <div class="col-9">
+                    <p class="mb-2">
+                    <strong>Lorem ipsum dolor sit
+                        amet</strong>
+                    </p>
+                    <p><u>15.07.2020</u></p>
+                </div>
+                </div>
+            </a>
+            <a href="" class="text-dark">
+                <div class="row mb-4 border-bottom pb-2">
+                <div class="col-3">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="img-fluid shadow-1-strong rounded" alt="Los Angeles Skyscrapers">
+                </div>
+                <div class="col-9">
+                    <p class="mb-2">
+                    <strong>Lorem ipsum dolor sit
+                        amet</strong>
+                    </p>
+                    <p><u>15.07.2020</u></p>
+                </div>
+                </div>
+            </a>
+            <a href="" class="text-dark">
+                <div class="row mb-4 border-bottom pb-2">
+                <div class="col-3">
+                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="img-fluid shadow-1-strong rounded" alt="Skyscrapers">
+                </div>
+                <div class="col-9">
+                    <p class="mb-2">
+                    <strong>Lorem ipsum dolor sit
+                        amet</strong>
+                    </p>
+                    <p><u>15.07.2020</u></p>
+                </div>
+                </div>
+            </a>
+            </div>
+        </div>
+        <div class="col-md-6 col-xl-3 mb-3 mb-md-0">
+            <div class="list-group list-group-flush">
+            <p class="mb-0 list-group-item text-uppercase font-weight-bold">
+                Iste quaerato
+            </p>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cras justo odio</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Est iure</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Praesentium</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Laboriosam</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Dolor sit</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Amet consectetur</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cras justo odio</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Adipiscing elit</a>
+            </div>
+        </div>
+        <div class="col-md-6 col-xl-3">
+            <div class="list-group list-group-flush">
+            <p class="mb-0 list-group-item text-uppercase font-weight-bold">
+                Cras justo odio
+            </p>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Saepe</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Vel alias</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Sunt doloribus</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cum dolores</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Perspiciatis quo</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cras justo odio</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Laudantium maiores</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Provident dolor</a>
+            </div>
+        </div>
+        </div>
     </div>
-  </div>
+    </div>
+</li>
