--- a/partials/nav-megamenu/about.hbs
+++ b/partials/nav-megamenu/about.hbs
@@ -1,4 +1,4 @@
-<li class="nav-item dropdown position-static">
+<li class="nav-item dropdown ">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     About
     </a>
