--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -440,7 +440,7 @@ production stylesheet in assets/built/screen.css
     display: inline-flex;
     align-items: center;
     flex-wrap: wrap;
-    gap: 32px;
+    /* gap: 32px; */
     list-style: none;
     margin: 0;
     padding: 0;
@@ -711,7 +711,7 @@ production stylesheet in assets/built/screen.css
     #gh-head .gh-head-inner {
         grid-template-rows: auto 1fr auto;
         grid-template-columns: 1fr;
-        gap: 48px;
+        /* gap: 48px; */
     }
 
     #gh-head .gh-head-brand {
