--- a/partials/nav-megamenu/policy.hbs
+++ b/partials/nav-megamenu/policy.hbs
@@ -3,7 +3,7 @@
     Policy
     </a>
     <!-- Dropdown menu -->
-    <div class="dropdown-menu w-100 mt-0" aria-labelledby="navbarDropdown" style="border-top-left-radius: 0px; border-top-right-radius: 0px; position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(111px, 52.5px, 0px);" data-popper-placement="bottom-start" data-mdb-popper="null">
+    <div class="dropdown-menu w-auto mt-0" aria-labelledby="navbarDropdown" style="border-top-left-radius: 0px; border-top-right-radius: 0px; position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(111px, 52.5px, 0px);" data-popper-placement="bottom-start" data-mdb-popper="null">
     <div class="container">
         <div class="row my-4">
         <div class="col-md-6 col-xl-3 mb-3 mb-xl-0">
