--- a/partials/nav-megamenu/about.hbs
+++ b/partials/nav-megamenu/about.hbs
@@ -1,9 +1,9 @@
 <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" tabindex="0">
+    <a class="nav-link" href="#">
     About
     </a>
     <!-- Dropdown menu -->
-    <div class="dropdown-menu mt-0" aria-labelledby="navbarDropdown" style="border-top-left-radius: 0px; border-top-right-radius: 0px; position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(111px, 52.5px, 0px);" data-popper-placement="bottom-start" data-mdb-popper="null">
+    <div class="dropdown-menu mt-0" aria-labelledby="navbarDropdown" style="border-top-left-radius: 0px; border-top-right-radius: 0px; position: absolute; inset: 0px auto auto 0px; margin: 0px;" data-popper-placement="bottom-start" data-mdb-popper="null">
     <div class="container">
         <div class="row my-4">
         <div class="col-md-6 col-xl-3 mb-3 mb-xl-0">
