--- a/partials/nav-megamenu/education.hbs
+++ b/partials/nav-megamenu/education.hbs
@@ -1,9 +1,9 @@
 <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    <a class="nav-link" href="#">
     Education
     </a>
     <!-- Dropdown menu -->
-    <div class="dropdown-menu w-auto mt-0" aria-labelledby="navbarDropdown" style="border-top-left-radius: 0px; border-top-right-radius: 0px; position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(111px, 52.5px, 0px);" data-popper-placement="bottom-start" data-mdb-popper="null">
+    <div class="dropdown-menu mt-0" aria-labelledby="navbarDropdown" style="border-top-left-radius: 0px; border-top-right-radius: 0px; position: absolute; inset: 0px auto auto 0px; margin: 0px;" data-popper-placement="bottom-start" data-mdb-popper="null">
     <div class="container">
         <div class="row my-4">
         <div class="col-md-6 col-xl-3 mb-3 mb-xl-0">
@@ -102,6 +102,36 @@
                 </div>
                 </div>
             </a>
+            </div>
+        </div>
+        <div class="col-md-6 col-xl-3 mb-3 mb-md-0">
+            <div class="list-group list-group-flush">
+            <p class="mb-0 list-group-item text-uppercase font-weight-bold">
+                Iste quaerato
+            </p>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cras justo odio</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Est iure</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Praesentium</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Laboriosam</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Dolor sit</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Amet consectetur</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cras justo odio</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Adipiscing elit</a>
+            </div>
+        </div>
+        <div class="col-md-6 col-xl-3">
+            <div class="list-group list-group-flush">
+            <p class="mb-0 list-group-item text-uppercase font-weight-bold">
+                Cras justo odio
+            </p>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Saepe</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Vel alias</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Sunt doloribus</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cum dolores</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Perspiciatis quo</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cras justo odio</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Laudantium maiores</a>
+            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Provident dolor</a>
             </div>
         </div>
         </div>
