--- a/assets/css/megamenu.css
+++ b/assets/css/megamenu.css
@@ -12,6 +12,7 @@
 
 .gh-head-menu .nav-link + .dropdown-menu  {
   display: none;
+  font-size: 2rem;
   transform: translate3d(111px, 80px, 0px);
 }
 
@@ -41,7 +42,7 @@
   }
 
   /* disable hover function when in hamburger menu */
-  .gh-head-menu .nav-link + .dropdown-menu  {
+  /* .gh-head-menu .nav-link + .dropdown-menu  {
     display: none;
   }
   
@@ -55,10 +56,10 @@
   
   .gh-head-menu .nav-link:hover + .dropdown-menu:hover  {
     display: none;
-  }
+  } */
 
   /* use megamenu.js to make the nav-item clickable in hamburger menu */
-  /* #gh-head .gh-head-menu .nav-item .dropdown-menu {
+  #gh-head .gh-head-menu .nav-item .dropdown-menu {
     position: absolute;
     transform: translate3d(0px, 54px, 0px)
   }
@@ -70,5 +71,5 @@
   #gh-head .gh-head-menu a:hover {
     background-color: red;
   }
-   */
+  
 }
