--- a/assets/css/megamenu.css
+++ b/assets/css/megamenu.css
@@ -1,31 +1,51 @@
-/* make nav-link width=100% when in hamburger menu */
+/* Megamenu
+ * -----------------------------------------------------
+   The megamenu is structured as follow:
 
-.gh-head-menu .nav-link {
-  font-size: 2rem;
-  font-weight: bold;
-  text-shadow: 0.05rem 0.05rem #000;
-}
+div.gh-head
+  div.gh-head-inner
+    nav.gh-head-menu
+      li.nav-item.dropdown
+        a.nav-link
+        div.dropdown-menu
+          div.container   // the bootstrap grid system 
+            div.row
+              div.col
+              div.col
+              ...
+      li.nav-item.dropdown
+        ...
+      ...
+
+ */
 
 .gh-head-menu .nav-item {
   position: static;
 }
 
-.gh-head-menu .nav-link + .dropdown-menu  {
-  display: none;
+.gh-head-menu .nav-item .nav-link {
   font-size: 2rem;
-  transform: translate3d(111px, 80px, 0px);
+  font-weight: bold;
+  text-shadow: 0.05rem 0.05rem #000;
 }
 
-.gh-head-menu .nav-link:hover + .dropdown-menu  {
+/* hide dropdown-menu unless hovered on nav-link or dropdown-menu */
+.gh-head-menu .nav-item .dropdown-menu  {
+  /* display: none; */
   display: block;
+  opacity: 0.0;       /* opacity is used for animation */
+  visibility: hidden; /* visibility is used to disallow interaction (e.g. hover)*/
+  transition: 0.3s;
+  font-size: 2rem;
+  transform: translate3d(111px, 64px, 0px);
 }
 
-.gh-head-menu .nav-link + .dropdown-menu:hover  {
-  display: block;
-}
-
-.gh-head-menu .nav-link:hover + .dropdown-menu:hover  {
-  display: block;
+.gh-head-menu .nav-item .nav-link:hover + .dropdown-menu,
+.gh-head-menu .nav-item .nav-link + .dropdown-menu:hover,
+.gh-head-menu .nav-item .nav-link:hover + .dropdown-menu:hover {
+  /* display: block; */
+  opacity: 1.0;
+  visibility: visible;
 }
 
 /* on mobile phone */
@@ -38,8 +58,21 @@
 
   #gh-head .gh-head-menu .nav-item{
     width: 100%;
-    position: relative;
+    position: static;
   }
+
+  /* TODO: use megamenu.js to make the nav-item clickable in hamburger menu */
+  #gh-head .gh-head-menu .nav-item .dropdown-menu {
+    position: absolute;
+    transform: translate3d(0px, 54px, 0px);
+    font-size: 1rem;
+  }
+
+  /* hide action bar so that it won't occlude dropdown */
+  #gh-head .gh-head-actions{
+    display: none !important;
+  }
+
 
   /* disable hover function when in hamburger menu */
   /* .gh-head-menu .nav-link + .dropdown-menu  {
@@ -58,18 +91,4 @@
     display: none;
   } */
 
-  /* use megamenu.js to make the nav-item clickable in hamburger menu */
-  #gh-head .gh-head-menu .nav-item .dropdown-menu {
-    position: absolute;
-    transform: translate3d(0px, 54px, 0px)
-  }
-
-  #gh-head .gh-head-actions{
-    display: none !important;
-  }
-
-  #gh-head .gh-head-menu a:hover {
-    background-color: red;
-  }
-  
 }
