--- a/assets/css/megamenu.css
+++ b/assets/css/megamenu.css
@@ -19,6 +19,10 @@ div.gh-head
 
  */
 
+.gh-head-logo {
+  padding: 10px;
+}
+
 .gh-head-menu .nav-item {
   position: static;
 }
@@ -31,27 +35,32 @@ div.gh-head
 
 /* hide dropdown-menu unless hovered on nav-link or dropdown-menu */
 .gh-head-menu .nav-item .dropdown-menu  {
-  /* display: none; */
-  display: block;
-  opacity: 0.0;       /* opacity is used for animation */
-  visibility: hidden; /* visibility is used to disallow interaction (e.g. hover)*/
-  transition: 0.6s;
+  display: none;
+  /* display: block; */
+  visibility: hidden; 
+  opacity: 0.0;       
+  /* transition: 0.3s; */
   font-size: 2rem;
   transform: translate3d(111px, 64px, 0px);
+  margin: 0px;
 }
 
 .gh-head-menu .nav-item .nav-link:hover + .dropdown-menu,
 .gh-head-menu .nav-item .nav-link + .dropdown-menu:hover,
 .gh-head-menu .nav-item .nav-link:hover + .dropdown-menu:hover {
-  /* display: block; */
-  opacity: 1.0;
-  transition: 0.3s;
+  display: block;
   visibility: visible;
+  opacity: 1.0;
+  /* transition: 0.5s; */
 }
 
 /* on mobile phone */
 @media (max-width: 767px) {
   /* hide actions so that it won't occlude megamenu dropdown */
+
+  #gh-head {
+    padding: 5px;
+  }
 
   #gh-head .gh-head-inner {
     height: auto;
@@ -66,7 +75,10 @@ div.gh-head
   #gh-head .gh-head-menu .nav-item .dropdown-menu {
     position: absolute;
     transform: translate3d(0px, 54px, 0px);
-    font-size: 1rem;
+    font-size: 1.5rem;
+    /* better fit dropdown into menu */
+    margin: 0px;
+    width: 100%;
   }
 
   /* hide action bar so that it won't occlude dropdown */
