--- a/partials/nav-megamenu/research.hbs
+++ b/partials/nav-megamenu/research.hbs
@@ -3,7 +3,7 @@
     Research
     </a>
     <!-- Dropdown menu -->
-    <div class="dropdown-menu mt-0" aria-labelledby="navbarDropdown" style="border-top-left-radius: 0px; border-top-right-radius: 0px; position: absolute; inset: 0px auto auto 0px; margin: 0px;" data-popper-placement="bottom-start" data-mdb-popper="null">
+    <div class="dropdown-menu mt-0" aria-labelledby="navbarDropdown" style="border-top-left-radius: 0px; border-top-right-radius: 0px; position: absolute; inset: 0px auto auto 0px;;" data-popper-placement="bottom-start" data-mdb-popper="null">
     <div class="container">
         <div class="row my-4">
         <div class="col-md-6 col-xl-3 mb-3 mb-xl-0">
@@ -113,10 +113,6 @@
             <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Est iure</a>
             <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Praesentium</a>
             <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Laboriosam</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Dolor sit</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Amet consectetur</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cras justo odio</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Adipiscing elit</a>
             </div>
         </div>
         <div class="col-md-6 col-xl-3">
@@ -128,10 +124,6 @@
             <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Vel alias</a>
             <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Sunt doloribus</a>
             <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cum dolores</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Perspiciatis quo</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Cras justo odio</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Laudantium maiores</a>
-            <a href="" class="list-group-item list-group-item-action"><i class="fas fa-caret-right pe-2"></i>Provident dolor</a>
             </div>
         </div>
         </div>
