--- a/partials/nav-megamenu/education.hbs
+++ b/partials/nav-megamenu/education.hbs
@@ -9,7 +9,7 @@
         <div class="col-md-6 col-xl-3 mb-3 mb-xl-0">
             <div class="pt-2">
             <p class="text-uppercase font-weight-bold">
-                Explicabo voluptas
+                Education
             </p>
             <div class="bg-image hover-overlay shadow-1-strong rounded ripple mb-4" data-mdb-ripple-color="light">
                 <img src="https://mdbcdn.b-cdn.net/img/new/fluid/city/113.webp" class="img-fluid">
