--- a/index.hbs
+++ b/index.hbs
@@ -51,12 +51,9 @@ into the {body} of the default.hbs template --}}
 <main id="site-main" class="site-main outer">
 <div class="inner posts">
 
-    <div class="post-feed">
-        {{#foreach posts}}
-            {{!-- The tag below includes the markup for each post - partials/post-card.hbs --}}
-            {{> "post-card"}}
-        {{/foreach}}
-    </div>
+    {{> "featured-slide"}}
+
+    {{> "post-feed"}}
 
     {{pagination}}
 
