--- a/assets/css/megamenu.css
+++ b/assets/css/megamenu.css
@@ -31,6 +31,25 @@ div.gh-head
   font-size: 2rem;
   font-weight: bold;
   text-shadow: 0.05rem 0.05rem #000;
+  transition: font-size 0.2s;
+}
+
+.gh-head-menu .nav-item .nav-link:hover,
+.gh-head-menu .nav-item .nav-link.active {
+  font-weight: bold;
+  /* underscore with cool animation */
+  text-shadow: 0.1rem 0.1rem #000;
+  font-size: 2.2rem;
+  transition: font-size 0.2s;
+}
+
+.gh-head-menu .nav-item .nav-link.active {
+  font-size: 2.4rem;
+  background-color: red;
+  /* round-corner */
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+
 }
 
 /* hide dropdown-menu unless hovered on nav-link or dropdown-menu */
@@ -49,13 +68,7 @@ div.gh-head
   border-bottom-right-radius: 0.5rem;
 }
 
-.gh-head-menu .nav-item .nav-link.active {
-  background-color: red;
-  /* round-corner */
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
 
-}
 
 /* on mobile phone */
 @media (max-width: 767px) {
@@ -74,7 +87,12 @@ div.gh-head
     position: relative;
   }
 
-  /* TODO: use megamenu.js to make the nav-item clickable in hamburger menu */
+  #gh-head .gh-head-menu .nav-item .nav-link {
+      font-size: 2.6rem;
+      font-weight: 600;
+      text-transform: none;
+  }
+
   #gh-head .gh-head-menu .nav-item .dropdown-menu {
     position: absolute;
     transform: translate3d(0px, 54px, 0px);
@@ -89,22 +107,5 @@ div.gh-head
     display: none !important;
   }
 
-
-  /* disable hover function when in hamburger menu */
-  /* .gh-head-menu .nav-link + .dropdown-menu  {
-    display: none;
-  }
-  
-  .gh-head-menu .nav-link:hover + .dropdown-menu  {
-    display: none;
-  }
-  
-  .gh-head-menu .nav-link + .dropdown-menu:hover  {
-    display: none;
-  }
-  
-  .gh-head-menu .nav-link:hover + .dropdown-menu:hover  {
-    display: none;
-  } */
 
 }
