--- a/default.hbs
+++ b/default.hbs
@@ -22,6 +22,8 @@
     {{!-- stylesheet for slider --}}
     <link rel="stylesheet" type="text/css" href="{{asset "built/slider.css"}}" />
 
+    {{!-- stylesheet for fontawesome --}}
+    <script src="https://kit.fontawesome.com/244878b4f0.js" crossorigin="anonymous"></script>
 
     {{!-- This tag outputs all your advanced SEO meta, structured data, and other important settings,
     it should always be the last tag before the closing head tag --}}
@@ -30,7 +32,7 @@
 </head>
 <body class="{{body_class}} is-head-{{#match @custom.navigation_layout "Logo on cover"}}left-logo{{else match @custom.navigation_layout "Logo in the middle"}}middle-logo{{else}}stacked{{/match}}{{#match @custom.title_font "=" "Elegant serif"}} has-serif-title{{/match}}{{#match @custom.body_font "=" "Modern sans-serif"}} has-sans-body{{/match}}{{#if @custom.show_publication_cover}} has-cover{{/if}}">
 <div class="viewport">
-
+    {{> todolist}}
     <header id="gh-head" class="gh-head outer">
         <div class="gh-head-inner inner">
             <div class="gh-head-brand">
@@ -61,15 +63,7 @@
     </div>
 
     {{!-- The global footer at the very bottom of the screen --}}
-    <footer class="site-footer outer">
-        <div class="inner">
-            <section class="copyright"><a href="{{@site.url}}">{{@site.title}}</a> &copy; {{date format="YYYY"}}</section>
-            <nav class="site-footer-nav">
-                {{navigation type="secondary"}}
-            </nav>
-            {{!-- <div><a href="https://ghost.org/" target="_blank" rel="noopener">Powered by Ghost</a></div> --}}
-        </div>
-    </footer>
+    {{> site_footer}}
 
 </div>
 {{!-- /.viewport --}}
